# Poker-Bluff-Detector

./: .gitignore  README.md  RESEARCH.md  pyproject.toml
.playwright-mcp/: page-2026-07-16T18-32-50-057Z.yml
configs/: hcl_rois.yaml
configs/seats/: CyQRb173NfA.yaml  ObmthwbEXCI.yaml  loAuriiBRCk.yaml  loAuriiBRCk_seg.yaml  osFhAW7BFMs.yaml
data/: README.md
docs/: prereg_iteration4.md
paper/: .gitignore  README.md  main.aux  main.bbl  main.blg  main.out  main.tex  make_arxiv.sh  references.bib
paper/figures/: make_figures.py  perm_null.npy
scripts/: ec2_userdata.sh  run_behavior_shards.sh  run_extract_chunks.sh  transcode_parallel.sh
src/pokertell/: __init__.py  checkpoint.py  cli.py  config.py  dataset.py
src/pokertell/behavior/: __init__.py  events.py  extract.py  face.py  features.py  models.py  pose.py  smoothing.py
src/pokertell/demo/: __init__.py  overlay.py  predict.py
src/pokertell/eval/: __init__.py  metrics.py  report.py  splits.py
src/pokertell/gamestate/: __init__.py  cards.py  extract.py  fields.py  names.py  ocr.py  rois.py  statemachine.py
src/pokertell/ingest/: __init__.py  download.py
src/pokertell/labels/: __init__.py  build.py  equity.py
tests/: test_behavior.py  test_cards.py  test_checkpoint.py  test_demo.py  test_equity.py  test_events.py  test_features.py  test_fields.py  test_labels.py  test_metrics.py  test_pose_metrics.py  test_smoothing.py  test_splits.py  test_statemachine.py
