[project]
name = "pokertell"
version = "0.1.0"
description = "Ablation study: does nonverbal behavior add predictive power over betting action alone on broadcast poker footage?"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "treys>=0.1.8",
    "eval7>=0.1.10",
    "pyyaml>=6.0",
    "typer>=0.12",
    "opencv-python>=4.10",
    "mediapipe>=0.10.14",
    "yt-dlp>=2025.1.15",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
# PaddleOCR pulls in paddlepaddle, which is a heavy install. Kept optional so the
# rest of the pipeline works without it: uv sync --extra ocr
ocr = [
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
pokertell = "pokertell.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokertell"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
